--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
-    "name": "automattic/underscores",
+    "name": "2bytecoder/adnet-print",
     "type": "wordpress-theme",
-    "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+    "description": "A WP theme for Adnet Print Company",
     "keywords": [
         "WordPress",
         "Themes"
     ],
-    "homepage": "https://github.com/Automattic/_s",
-    "license": "GPL-2.0-or-later",
+    "homepage": "https://adnetprint.com",
+    "license": "Copyright Abhishek Kumar Pathak, All rights reserved.",
     "authors": [
+        {
+            "name": "Abhishek Kumar Pathak",
+            "email": "officialabhishekpathak@gmail.com"
+        },
         {
             "name": "Contributors",
             "homepage": "https://github.com/Automattic/_s/graphs/contributors"
