composer.json updated

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "2bytecoder/adnet-print",
+    "name": "pathak404/adnet-print",
     "type": "wordpress-theme",
     "description": "A WP theme for Adnet Print Company",
     "keywords": [
